feat: Add download progress reporting for patch installations